## master

  - Make sure all multiline entries in config files are processed as lists
  - Add exclude-patterns to GUI (was present in CLI version already)
  - Make sure we always quote exclusions patterns or files
  - Updated internal restic binary to 0.15.2 compiled with go1.20.3
  - *SECURITY* Don't log password command, even in debug mode

## 2.2.0 - rc12 - 03/05/2023
  - Add grafana dashboard to examples directory
  - Implement password command functionality
  - Compiled with newer Nuitka commercial 1.5.7
  - Added windows executable signature script

## v2.2.0 - rc11 - 24/04/2023
  - Add default 1 minute timeout for init operations
  - Fix auto_upgrade_group wasn't transmitted to server
  - Make sure new binary is set as executable in linux upgrade
  - *SECURITY* Show unencrypted is only allowed on compiled builds where default AES KEY is not used
    - This prevents a password injection from another conf file
  - *SECURITY* Prevent raw password update in config file
  - Fix empty password makes GUI fail
  - Fix empty password makes CLI fail
  - Fix empty data is shown as encrypted
  - Enforce repository and passwords to be strings, also remove trailing and ending spaces
  - Add warning when source and destination are the same path
  - Compiled with newer Nuitka 1.5.6+ that leverages lesser virus detection issues

## v2.2.0 - rc10 - 30/03/2023
  - Add arm/arm64 compilation support
  - Add an option to disable GUI compilation

## v2.2.0 - rc9 - 28/03/2023
  - Allow AES key rotation by keeping old key and updating encryption on config loading
  - Make sure restic binary is executable for Nuitka builds
  - Improve compiler script
  - Add messages when no tcl/tk exists in GUI mode
  - Switch to i18nice fork of python-i18n

## v2.2.0 - rc8 - 22/03/2023
  - Highly optimize tree window creation times (x3.5) by replacing dateutil.parser.parse()
  - Fix missing locale might fail on certain linux builds
  - Don't build NPBackupInstaller on non Windows platforms